Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.16-dev-38-g96c65e9 https://github.com/reactos/reactos/commit/96c65e94e1621efb8989aa5ee93961ad1690c6ba
Description
fixme:(dll\win32\comctl32\toolbar.c:403) [0000000000140178] TBSTYLE_REGISTERDROP not implemented |
fixme:(dll\win32\comctl32\toolbar.c:403) [0000000000190170] TBSTYLE_REGISTERDROP not implemented |
CFSFolder.cpp:1033: Unexpected failure (hr)=80004002. |
CFSFolder.cpp:1033: Unexpected failure (hr)=80004002. |
CFSFolder.cpp:1033: Unexpected failure (hr)=80004002. |
CDrivesFolder.cpp:803: Unexpected failure (hr)=80004002. |
CRegFolder.cpp:506: Unexpected failure (hr)=80004002. |
(dll\win32\kernel32\client\proc.c:138) Accepting image version 6.0, although ReactOS is an NT 5.2 OS! |
(dll\ntdll\ldr\ldrinit.c:1919) Applying LOAD_CONFIG |
(win32ss\user\ntuser\window.c:2201) err: Thread is not attached to a desktop! Cannot create window (OleMainThreadWndClass) |
(win32ss\user\ntuser\window.c:2795) err: co_UserCreateWindowEx failed! |
err:(dll\win32\ole32\compobj.c:1721) CreateWindow failed with error 0 |
(dll\win32\kernel32\client\proc.c:138) Accepting image version 6.0, although ReactOS is an NT 5.2 OS! |
(dll\ntdll\ldr\ldrinit.c:1919) Applying LOAD_CONFIG |
(ntoskrnl\mm\mmfault.c:44) Page fault instruction fetch at 0000000000F52A7E |
(dll\ntdll\ldr\ldrinit.c:855) WARNING: Exception 0xc0000005 during LdrpCallInitRoutine(DLL_PROCESS_ATTACH) for avcodec-55.dll |
(dll\ntdll\ldr\ldrinit.c:872) LDR: DLL_PROCESS_ATTACH for dll "avcodec-55.dll" (InitRoutine: 0000000000481420) failed |
(dll\ntdll\ldr\ldrinit.c:2542) LDR: LdrpProcessInitialization failed running initialization routines; status c0000142 |
(dll\ntdll\ldr\ldrinit.c:2577) LDR: Process initialization failure for C:\Programme\Blender Foundation\Blender\blender-app.exe; NTSTATUS = c0000142 |
err:(win32ss\user\user32\windows\messagebox.c:1048) MessageBox: L"The application failed to initialize properly (0xc0000142). Click on OK to terminate the application.\r\n" |
(win32ss\user\ntuser\desktop.c:2769) err: Attempted to close thread desktop |
Blender changes the protection of an executable section from EXECUTE_READ to EXECUTE_READWRITE. Previously Mm would make the PTEs read-only + CoW, since the section is read-only, thus removing the execute rights, which caused Blender to crash, when trying to execute such a page, before it was written to.