[NTOS:MM] Fix PTE protection for executable CoW pages

Fixes Blender x64.
See https://jira.reactos.org/browse/CORE-19761